// Copyright 2018 The Android Open Source Project
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

// Collects information about an individual live WakeLock instances.
message WakeLockStats {
    string name = 1;
    int32 pid = 2;
    bool active = 3;
    uint64 last_updated = 4;
}

message SystemSuspendStats {
    // Maps a unique id of a WakeLock instance to the corresponding WakeLockStats message.
    map<string, WakeLockStats> wl_stats = 1;
}
